# DFS

./: .gitignore  Dockerfile.chunk  Dockerfile.master  README.md  docker-compose.yaml  makefile
chunkNode/: CMakeLists.txt  main.cpp
chunkNode/chunks/: README.md_0  README.md_1  test_0.txt
chunkNode/includes/: ChunkServer.cpp  ChunkServer.h  ChunkServerClient.cpp  ChunkServerClient.h
chunkNode_copy/: main.cpp
chunkNode_copy/includes/: ChunkServer.h
chunkNode_copy2/includes/: ChunkServer.cpp
client/: CMakeLists.txt  main.cpp
client/includes/: Client.cpp  Client.h
masterNode/: CMakeLists.txt  MasterNode.cpp  MasterNode.hpp  compile.sh  docker-compose.yaml  main.cpp
masterNode/client/: Dockerfile  client.cpp
masterNode/includes/: MasterNode.cpp  MasterNode.hpp  MasterNodeServer.cpp  MasterNodeServer.hpp
masterNode/server/: Dockerfile  server.cpp
node/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
testfiles/: test.txt
testing/: debinarer.py  resume.docx  test.py  test.txt
